fix codex editor toolbar z-index bug

--- a/app/src/components/editor/styles/Editor.css
+++ b/app/src/components/editor/styles/Editor.css
@@ -1,3 +1,7 @@
+.ce-toolbar {
+  z-index: 4;
+}
+
 .ce-inline-toolbar {
   margin: 335px 10px;
 }
